fixed bugs and added changes in role level security which concern a work of saving project tasks